k8s/drupal-nginx-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drupal-nginx
  labels:
    app: drupal-nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: drupal-nginx
  template:
    metadata:
      labels:
        app: drupal-nginx
    spec:
      hostname: drupal-nginx
      volumes:
      - name: drupal-files
        persistentVolumeClaim:
          claimName: drupal-files
      containers:
      - name: drupal-nginx
        image: harbor.lan:8443/drupal/10-web:10.2.1-alpine
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        volumeMounts:
        - name: drupal-files
          mountPath: /opt/drupal/web/sites/default/files
      imagePullSecrets:
      - name: regcred
