k8s/drupal-loadbalancer-k8s.yml
apiVersion: v1
kind: Service
metadata:
  name: drupal-nginx
  labels:
    app: drupal-nginx
spec:
  selector:
    app: drupal-nginx
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
  externalIPs:
  - "192.168.122.220"
