k8s/drupal-mariadb-k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: drupal-mariadb
  labels:
    app: drupal-mariadb
spec:
  type: ClusterIP
  ports:
  - port: 3306
    name: drupal-mariadb
  selector:
    app: drupal-mariadb

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: drupal-mariadb
  labels:
    app: drupal-mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drupal-mariadb
  template:
    metadata:
      labels:
        app: drupal-mariadb
    spec:
      hostname: drupal-mariadb
      containers:
      - name: drupal-mariadb
        image: nginx:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3306
