k8s/drupal-mariadb-slave-k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: drupal-mariadb-slave
  labels:
    app: drupal-mariadb-slave
spec:
  clusterIP: None
  ports:
  - port: 3306
    name: drupal-mariadb-slave
  selector:
    app: drupal-mariadb-slave

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: drupal-mariadb-slave
  labels:
    app: drupal-mariadb-slave
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drupal-mariadb-slave
  template:
    metadata:
      labels:
        app: drupal-mariadb-slave
    spec:
      hostname: drupal-mariadb-slave
      containers:
      - name: drupal-mariadb-slave
        image: mariadb:11.2
        imagePullPolicy: Always
        ports:
        - containerPort: 3306
