k8s/drupal-php-k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: drupal-php
  labels:
    app: drupal-php
spec:
  type: ClusterIP
  ports:
  - port: 9000
    name: drupal-php
  selector:
    app: drupal-php

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: drupal-php
  labels:
    app: drupal-php
spec:
  replicas: 3
  selector:
    matchLabels:
      app: drupal-php
  template:
    metadata:
      labels:
        app: drupal-php
    spec:
      hostname: drupal-php
      containers:
      - name: drupal-php
        image: harbor.lan:8443/drupal/10-php:10.1.6-alpine
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: regcred
