k8s/drupal-ingress-k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
spec:
  rules:
  - host: "drupal.k8s"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: drupal-nginx
            port:
              number: 80
